--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,10 @@
+= 1.0.7 (2015-08-05)
+
+* Updated Intercom for iOS to [2.3.2](https://github.com/intercom/intercom-ios/blob/master/CHANGES).
+
 = 1.0.6 (2015-07-28)
 
-* Updated Intercom for Android to [1.1.3](https://github.com/intercom/intercom-android/blob/master/CHANGELOG.md)
+* Updated Intercom for Android to [1.1.3](https://github.com/intercom/intercom-android/blob/master/CHANGELOG.md).
 
 = 1.0.5 (2015-07-20)
 
