Update ios to 3.0.11 and android to 3.0.7

--- a/src/ios/Intercom.framework/Versions/A/Resources/Intercom.bundle/locales/fi.strings
+++ b/src/ios/Intercom.framework/Versions/A/Resources/Intercom.bundle/locales/fi.strings
@@ -1,30 +1,30 @@
-"error.loading.conversation" = "Keskustelun lataus epдonnistui";
+"error.loading.conversation" = "Keskustelun lataus epäonnistui";
 "actionsheet.message.failed.delivery" = "Viestin toimitus ei onnistunut";
 "message.delivered" = "Toimitettu";
 "alert.new.sdk.user.button" = "Kiitos";
 "profile.time.location.format" = "{time} – {location}";
-"message.state.sending" = "Lдhetetддn";
+"message.state.sending" = "Lähetetään";
 "message.placeholder.write.reply" = "Kirjoita vastaus";
-"twitter.follow.us" = "Seuraa meitд Twitterissд";
-"alert.new.sdk.user.message" = "iOS-sovellus on nyt integroitu Intercom-kдyttцympдristцn kanssa";
+"twitter.follow.us" = "Seuraa meitä Twitterissä";
+"alert.new.sdk.user.message" = "iOS-sovellus on nyt integroitu Intercom-käyttöympäristön kanssa";
 "error.title" = "Jokin meni vikaan";
-"error.no_conversations.message.no_app_name" = "Keskusteluja ei vielд ole";
-"facebook.like.us" = "Tykkдд meistд Facebookissa";
+"error.no_conversations.message.no_app_name" = "Keskusteluja ei vielä ole";
+"facebook.like.us" = "Tykkää meistä Facebookissa";
 "from.app" = "– {name}";
-"error.loading.conversations.fallback" = "Keskusteluja tдmдn tiimin kanssa ei voitu ladata: {name}";
+"error.loading.conversations.fallback" = "Keskusteluja tämän tiimin kanssa ei voitu ladata: {name}";
 "message.placeholder.start.conversation" = "Aloita keskustelu";
 "navigation.back" = "Takaisin";
 "admin.from.app" = "{name} – {company}";
-"message.not.seen" = "Ei vielд nдhty";
+"message.not.seen" = "Ei vielä nähty";
 "error.no_conversations.title" = "Ei keskusteluja";
 "time.difference.delivered" = "Toimitettu";
-"actionsheet.try.again" = "Yritд uudelleen";
+"actionsheet.try.again" = "Yritä uudelleen";
 "alert.new.sdk.user.title" = "Onnittelut";
 "app_team" = "{name}-tiimi";
 "navbar.title.conversations" = "Keskustelut – {name}";
 "actionsheet.cancel" = "Peruuta";
 "navigation.close" = "Sulje";
-"message.send" = "Lдhetд";
+"message.send" = "Lähetä";
 "time.difference.format.hours.ago" = "{delta} h sitten";
 "time.difference.format.weeks.ago" = "{delta} vkoa sitten";
 "last_active.format.hours.ago" = "Aktiivinen {hours} h sitten";
@@ -34,15 +34,15 @@
 "time.difference.just.now" = "Juuri nyt";
 "last_active.minutes.ago" = "Aktiivinen {minutes} m sitten";
 "last_active.15_minutes" = "Aktiivinen edellisen {minutes} m aikana";
-"message.seen" = "Nдhty";
+"message.seen" = "Nähty";
 "last_active.format.days.ago" = "Aktiivinen {days} pv sitten";
 "error.starting.conversation.fallback" = "Aloita uusi keskustelu";
-"error.no_conversations.message" = "Ei vielд keskusteluja tдmдn tiimin kanssa: {name}";
+"error.no_conversations.message" = "Ei vielä keskusteluja tämän tiimin kanssa: {name}";
 "time.difference.format.days.ago" = "{delta} pv sitten";
-"error.loading.conversations.fallback.no_app_name" = "Keskustelujen lataus epдonnistui";
-"we.run.on.intercom" = "Toimimme Intercom-kдyttцympдristцssд";
+"error.loading.conversations.fallback.no_app_name" = "Keskustelujen lataus epäonnistui";
+"we.run.on.intercom" = "Toimimme Intercom-käyttöympäristössä";
 "navbar.title.conversations.no_app_name" = "Keskustelut";
 "time.difference.format.minutes.ago" = "{delta} m sitten";
-"error.tap.to.retry" = "Yritд uudelleen";
+"error.tap.to.retry" = "Yritä uudelleen";
 "reply_from_admin" = "Vastaus {name}";
-"inbox.you" = "Sinд";
+"inbox.you" = "Sinä";
