--- a/src/ios/Intercom.framework/Versions/A/Resources/Intercom.bundle/locales/ca.strings
+++ b/src/ios/Intercom.framework/Versions/A/Resources/Intercom.bundle/locales/ca.strings
@@ -1,13 +1,13 @@
-"error.loading.conversation" = "No s’ha pogut carregar la conversa";
+﻿"error.loading.conversation" = "No s’ha pogut carregar la conversa";
 "actionsheet.message.failed.delivery" = "No s’ha pogut lliurar el missatge";
 "message.delivered" = "Lliurat";
-"alert.new.sdk.user.button" = "Grаcies";
+"alert.new.sdk.user.button" = "Gràcies";
 "profile.time.location.format" = "{time} a {location}";
-"message.state.sending" = "S’estа enviant";
+"message.state.sending" = "S’està enviant";
 "message.placeholder.write.reply" = "Escriu una resposta";
 "twitter.follow.us" = "Segueix-nos al Twitter";
-"alert.new.sdk.user.message" = "La teva app iOS ja estа integrada amb la plataforma d’Intercom";
-"error.title" = "S’ha produпt un error";
+"alert.new.sdk.user.message" = "La teva app iOS ja està integrada amb la plataforma d’Intercom";
+"error.title" = "S’ha produït un error";
 "error.no_conversations.message.no_app_name" = "Cap conversa encara";
 "facebook.like.us" = "Fes clic a M’agrada al Facebook";
 "from.app" = "de {name}";
@@ -29,8 +29,8 @@
 "time.difference.format.weeks.ago" = "Fa {delta} setmana(es)";
 "last_active.format.hours.ago" = "Actiu fa {hours} h";
 "actionsheet.delete" = "Suprimeix";
-"navbar.title.new.conversation" = "Conversaciу nova";
-"last_active.over_week_ago" = "Actiu fa mйs d’1 setmana";
+"navbar.title.new.conversation" = "Nova conversa";
+"last_active.over_week_ago" = "Actiu fa més d’1 setmana";
 "time.difference.just.now" = "Just ara";
 "last_active.minutes.ago" = "Actiu fa {minutes} min";
 "last_active.15_minutes" = "Actiu en els darrers {minutes} min";
