--- a/src/ios/Intercom.framework/Versions/A/Resources/Intercom.bundle/locales/hr.strings
+++ b/src/ios/Intercom.framework/Versions/A/Resources/Intercom.bundle/locales/hr.strings
@@ -1,27 +1,27 @@
-"error.loading.conversation" = "Nije bilo moguće učitati razgovor";
-"actionsheet.message.failed.delivery" = "Nije bilo moguće isporučiti vašu poruku";
+"error.loading.conversation"= "Nije moguće učitati razgovor";
+"actionsheet.message.failed.delivery" = "Nije moguće isporučiti vašu poruku";
 "message.delivered" = "Isporučeno";
 "alert.new.sdk.user.button" = "Hvala";
 "profile.time.location.format" = "{time} u {location}";
 "message.state.sending" = "Slanje";
-"message.placeholder.write.reply" = "Napiši odgovor";
-"twitter.follow.us" = "Pratite nas na usluzi Twitter";
-"alert.new.sdk.user.message" = "Sada je vaša aplikacija za operativni sustav iOS integrirana s platformom Intercom";
-"error.title" = "Nešto nije u redu";
+"message.placeholder.write.reply" = "Odgovori";
+"twitter.follow.us" = "Pratite nas na Twitteru";
+"alert.new.sdk.user.message" = "Vaša aplikacija za iOS je integrirana s Intercom";
+"error.title" = "Ups, došlo je do greške";
 "error.no_conversations.message.no_app_name" = "Ne postoji još nijedan razgovor";
-"facebook.like.us" = "Stavite oznaku Sviđa mi se na Facebooku";
+"facebook.like.us" = "Sviđa mi se!";
 "from.app" = "od korisnika {name}";
 "error.loading.conversations.fallback" = "Nije bilo moguće učitati razgovore s timom {name}";
 "message.placeholder.start.conversation" = "Započni razgovor";
 "navigation.back" = "Natrag";
-"admin.from.app" = "{name} od poduzeća {company}";
-"message.not.seen" = "Nije još uvijek pročitano";
+"admin.from.app" = "{name} iz {company}";
+"message.not.seen" = "Nije pročitano";
 "error.no_conversations.title" = "Ne postoji nijedan razgovor";
 "time.difference.delivered" = "Isporučeno";
 "actionsheet.try.again" = "Pokušaj ponovno";
 "alert.new.sdk.user.title" = "Čestitke";
 "app_team" = "tim {name}";
-"navbar.title.conversations" = "Razgovori s korisnikom {name}";
+"navbar.title.conversations" = "Razgovori s {name}";
 "actionsheet.cancel" = "Odustani";
 "navigation.close" = "Zatvori";
 "message.send" = "Pošalji";
@@ -40,7 +40,7 @@
 "error.no_conversations.message" = "Ne postoji nijedan razgovor s timom {name}";
 "time.difference.format.days.ago" = "prije {delta} dan(a)";
 "error.loading.conversations.fallback.no_app_name" = "Nije bilo moguće učitati vaše razgovore";
-"we.run.on.intercom" = "Naša aplikacija radi na platformi Intercom";
+"we.run.on.intercom" = "Mi koristimo Intercom";
 "navbar.title.conversations.no_app_name" = "Razgovori";
 "time.difference.format.minutes.ago" = "prije {delta} minutu(e/a)";
 "error.tap.to.retry" = "Pokušaj ponovo";
