--- a/src/ios/Intercom.framework/Versions/A/Resources/Intercom.bundle/locales/ko.strings
+++ b/src/ios/Intercom.framework/Versions/A/Resources/Intercom.bundle/locales/ko.strings
@@ -1,48 +1,48 @@
-"error.loading.conversation" = "대화를 로드할 수 없음";
-"actionsheet.message.failed.delivery" = "메시지가 전달되지 않음";
+"error.loading.conversation" = "대화를 불러올 수 없습니다";
+"actionsheet.message.failed.delivery" = "메시지 전송에 실패하였습니다";
 "message.delivered" = "전송되었습니다";
 "alert.new.sdk.user.button" = "감사합니다";
-"profile.time.location.format" = "{time} 위치: {location}";
-"message.state.sending" = "전송중";
-"message.placeholder.write.reply" = "회신 작성";
-"twitter.follow.us" = "트위터에서 팔로우 하세요";
-"alert.new.sdk.user.message" = "귀하의 iOS 앱이 지금 Intercom 플랫폼과 통합되는 중입니다";
+"profile.time.location.format" = "{location}의 현재시각: {time}";
+"message.state.sending" = "메세지를 전송중입니다";
+"message.placeholder.write.reply" = "답장하기";
+"twitter.follow.us" = "트위터 팔로우하기";
+"alert.new.sdk.user.message" = "고객님의 iOS 앱을 Intercom 플랫폼과 통합하는 중입니다";
 "error.title" = "문제가 발생했습니다";
-"error.no_conversations.message.no_app_name" = "대화가 아직 없음";
-"facebook.like.us" = "페이스북에서 좋아요를 눌러주세요";
-"from.app" = "{name}로부터";
-"error.loading.conversations.fallback" = "귀하의 {name} 팀과의 대화를 로드할 수 없음";
-"message.placeholder.start.conversation" = "대화 시작";
+"error.no_conversations.message.no_app_name" = "대화가 아직 없습니다";
+"facebook.like.us" = "페이스북에서 ‘좋아요’ 누르기";
+"from.app" = "{name}님으로부터";
+"error.loading.conversations.fallback" = "고객님의 {name} 팀과의 대화를 불러올 수 없습니다";
+"message.placeholder.start.conversation" = "대화 시작하기";
 "navigation.back" = "뒤로 가기";
-"admin.from.app" = "{name} 소속: {company}";
-"message.not.seen" = "아직 안보임";
-"error.no_conversations.title" = "대화가 없음";
+"admin.from.app" = "{company}의 {name}님";
+"message.not.seen" = "읽지 않음";
+"error.no_conversations.title" = "대화 없음";
 "time.difference.delivered" = "전송되었습니다";
-"actionsheet.try.again" = "재시도";
-"alert.new.sdk.user.title" = "축하합니다";
+"actionsheet.try.again" = "다시 시도하기";
+"alert.new.sdk.user.title" = "축하드립니다";
 "app_team" = "{name} 팀";
-"navbar.title.conversations" = "{name}와의 대화 내용";
+"navbar.title.conversations" = "{name}님과의 대화 내용";
 "actionsheet.cancel" = "취소하기";
 "navigation.close" = "닫기";
-"message.send" = "전송";
+"message.send" = "전송하기";
 "time.difference.format.hours.ago" = "{delta}시간 전";
 "time.difference.format.weeks.ago" = "{delta}주일 전";
-"last_active.format.hours.ago" = "{hours}시간 전 활동";
+"last_active.format.hours.ago" = "{hours}시간 전";
 "actionsheet.delete" = "삭제하기";
 "navbar.title.new.conversation" = "새로운 대화";
-"last_active.over_week_ago" = "1주보다 더 이전에 활동";
+"last_active.over_week_ago" = "1주보다 더 전에 활동";
 "time.difference.just.now" = "방금 전";
 "last_active.minutes.ago" = "{minutes}분 전 활동";
 "last_active.15_minutes" = "지난 {minutes}분 간 활동";
-"message.seen" = "보임";
+"message.seen" = "읽음";
 "last_active.format.days.ago" = "{days}일 전 활동";
-"error.starting.conversation.fallback" = "새로운 대화를 시작할 수 없음";
-"error.no_conversations.message" = "{name} 팀과의 대화가 아직 없음";
+"error.starting.conversation.fallback" = "새로운 대화를 시작할 수 없습니다";
+"error.no_conversations.message" = "{name} 팀과의 대화가 아직 없습니다";
 "time.difference.format.days.ago" = "{delta}일 전";
-"error.loading.conversations.fallback.no_app_name" = "귀하의 대화를 로드할 수 없음";
+"error.loading.conversations.fallback.no_app_name" = "고객님의 대화를 불러올 수 없습니다";
 "we.run.on.intercom" = "우리는 Intercom으로 구동합니다";
 "navbar.title.conversations.no_app_name" = "대화 내용";
 "time.difference.format.minutes.ago" = "{delta}분 전";
-"error.tap.to.retry" = "재시도";
-"reply_from_admin" = "회신 {name}";
+"error.tap.to.retry" = "다시 시도하기";
+"reply_from_admin" = "{name}님의 답장";
 "inbox.you" = "본인";
