--- a/src/ios/Intercom.framework/Versions/A/Resources/Intercom.bundle/locales/ar.strings
+++ b/src/ios/Intercom.framework/Versions/A/Resources/Intercom.bundle/locales/ar.strings
@@ -1,48 +1,48 @@
 "error.loading.conversation" = "تعذر تحميل المحادثة";
 "actionsheet.message.failed.delivery" = "تعذر تسليم الرسالة";
-"message.delivered" = "تم التسليم";
-"alert.new.sdk.user.button" = "شكرًا";
+"message.delivered" = "تم تسليمها";
+"alert.new.sdk.user.button" = "شكرًا لك";
 "profile.time.location.format" = "{time} في {location}";
 "message.state.sending" = "إرسال";
-"message.placeholder.write.reply" = "كتابة رد";
+"message.placeholder.write.reply" = "اكتب ردًا";
 "twitter.follow.us" = "تابعنا على Twitter";
-"alert.new.sdk.user.message" = "تم دمج تطبيقك على iOS مع نظام Intercom الأساسي الآن";
-"error.title" = "حدث خطأ ما";
-"error.no_conversations.message.no_app_name" = "ليس هناك أي محادثات إلى الآن";
-"facebook.like.us" = "أبد إعجابك بنا على Facebook";
+"alert.new.sdk.user.message" = "تطبيق iOS الخاص بك مدمج الآن مع نظام Intercom";
+"error.title" = "حدث خطأ";
+"error.no_conversations.message.no_app_name" = "لم يتم إجراء أي محادثات بعد";
+"facebook.like.us" = "تابعنا على Facebook";
 "from.app" = "من {name}";
 "error.loading.conversations.fallback" = "تعذر تحميل محادثاتك مع فريق {name}";
 "message.placeholder.start.conversation" = "بدء محادثة";
 "navigation.back" = "رجوع";
 "admin.from.app" = "{name} من {company}";
 "message.not.seen" = "لم تتم رؤيتها بعد";
-"error.no_conversations.title" = "ليس هناك أي محادثات";
-"time.difference.delivered" = "تم التسليم";
-"actionsheet.try.again" = "إعادة المحاولة";
+"error.no_conversations.title" = "لم يتم إجراء محادثات";
+"time.difference.delivered" = "تم تسليمها";
+"actionsheet.try.again" = "حاول مرة أخرى";
 "alert.new.sdk.user.title" = "تهانينا";
-"app_team" = "فربق {name}";
-"navbar.title.conversations" = "المحادثات مع {name}";
+"app_team" = "فريق {name}";
+"navbar.title.conversations" = "المحادثات\nمع {name}";
 "actionsheet.cancel" = "إلغاء";
 "navigation.close" = "إغلاق";
 "message.send" = "إرسال";
-"time.difference.format.hours.ago" = "قبل {delta} س";
-"time.difference.format.weeks.ago" = "قبل {delta} أ";
-"last_active.format.hours.ago" = "نشط قبل {hours} س";
+"time.difference.format.hours.ago" = "منذ {delta} س";
+"time.difference.format.weeks.ago" = "منذ {delta} أ";
+"last_active.format.hours.ago" = "نشط منذ {hours} س";
 "actionsheet.delete" = "حذف";
 "navbar.title.new.conversation" = "محادثة جديدة";
-"last_active.over_week_ago" = "نشط قبل أكثر من ساعة";
-"time.difference.just.now" = "توًا";
-"last_active.minutes.ago" = "نشط قبل {minutes} د";
-"last_active.15_minutes" = "نشط خلال آخر {minutes} د";
+"last_active.over_week_ago" = "نشط منذ أكثر من أسبوع";
+"time.difference.just.now" = "الآن";
+"last_active.minutes.ago" = "نشط منذ {minutes} د";
+"last_active.15_minutes" = "نشط في {minutes} د الأخيرة";
 "message.seen" = "تمت رؤيتها";
-"last_active.format.days.ago" = "نشط قبل {days} ي";
+"last_active.format.days.ago" = "نشط منذ {days} ي";
 "error.starting.conversation.fallback" = "تعذر بدء محادثة جديدة";
-"error.no_conversations.message" = "ليس هناك أي محادثات مع فريق {name} إلى الآن";
-"time.difference.format.days.ago" = "قبل {delta} ي";
+"error.no_conversations.message" = "لم يتم إجراء محادثات مع فريق {name} بعد";
+"time.difference.format.days.ago" = "منذ {delta} ي";
 "error.loading.conversations.fallback.no_app_name" = "تعذر تحميل محادثاتك";
-"we.run.on.intercom" = "نحن نعمل على Intercom";
+"we.run.on.intercom" = "يتم إجراء المحادثة من Intercom";
 "navbar.title.conversations.no_app_name" = "المحادثات";
-"time.difference.format.minutes.ago" = "قبل {delta} د";
+"time.difference.format.minutes.ago" = "منذ {delta} د";
 "error.tap.to.retry" = "إعادة المحاولة";
-"reply_from_admin" = "{name} الرد من";
+"reply_from_admin" = "رد من {name}";
 "inbox.you" = "أنت";
