--- a/src/ios/Intercom.framework/Versions/A/Resources/Intercom.bundle/locales/hu.strings
+++ b/src/ios/Intercom.framework/Versions/A/Resources/Intercom.bundle/locales/hu.strings
@@ -21,7 +21,7 @@
 "actionsheet.try.again" = "Próbáld újra";
 "alert.new.sdk.user.title" = "Gratulálunk";
 "app_team" = "{name} csapat";
-"navbar.title.conversations" = "Beszélgetések ({name})";
+"navbar.title.conversations" = "Beszélgetések\n{name}";
 "actionsheet.cancel" = "Mégse";
 "navigation.close" = "Bezárás";
 "message.send" = "Küldés";
