--- a/src/ios/Intercom.framework/Versions/A/Resources/Intercom.bundle/locales/pl.strings
+++ b/src/ios/Intercom.framework/Versions/A/Resources/Intercom.bundle/locales/pl.strings
@@ -21,7 +21,7 @@
 "actionsheet.try.again" = "Spróbuj ponownie";
 "alert.new.sdk.user.title" = "Gratulacje";
 "app_team" = "Zespół {name}";
-"navbar.title.conversations" = "Rozmowy z {name}";
+"navbar.title.conversations" = "Rozmowy\nz {name}";
 "actionsheet.cancel" = "Anuluj";
 "navigation.close" = "Zamknij";
 "message.send" = "Wyślij";
